# hydro_bo

./: .gitignore  LICENSE  MANIFEST.in  README.md  SOFTWARE.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
paper_results/idc/qq/: LH2.json  NH3.json
scripts/: ablation_bo.py  array_constrained_bo.py  bayesopt.py  bayesopt_old.py  config.yml  constrained_bo.py  find_missing_sobol.py  lambda_pareto_bo.py  mpc.py  mpc_rollout.py  multi_mpc.py  planning.py  planning_model.py  plot_price_trajectories.py  price_trajectories.py  sobol_indices.csv  sobol_mpc.py  unconstrained_bo.py
scripts/debug_mpc/: infeasible_model.ilp
scripts/general/: mpc_rollout.py  multi_mpc.py  planning_model.py  sobol_mpc.py
scripts/idc/: ablation_bo.py  array_constrained_bo.py  constrained_bo.py  unconstrained_bo.py
scripts/parametric/: config.yml  kg_bo.py  parametric_bo.py  sobol_parametric.py
scripts/price/: price_trajectories.py
src/algs/: __init__.py  bayesopt.py  dispatcher.py  logging_config.py  mpc.py  relaxation.py  utils.py
src/algs/bayesopt/: __init__.py  main.py  utils.py
src/algs/mpc/: __init__.py  core.py  utils.py
src/data/: config.yml  decision_tree.yml  functions.yml  variables.yml
src/data/shipping/: config.yml  equations.py
src/envs/: __init__.py
src/envs/planning/: core.py
src/envs/shipping/: core.py  dynamics.py  equations.py  manager.py  utils.py
src/hydr-bo/: __init__.py  core.py
src/hydr-bo/gis/: _testing.ipynb  tesselate.py
src/hydro_bo/: __init__.py
src/hydro_bo/algs/: __init__.py  bayesopt.py  dispatcher.py  logging_config.py  mpc.py  old_bayesopt.py  relaxation.py  seeding.py  utils.py
src/hydro_bo/data/: __init__.py  config.yml  decision_tree.yml  functions.yml  variables.yml
src/hydro_bo/envs/: __init__.py
tests/: test_kg.py  test_mpc_update_parity.py  test_parametric_wiring.py  test_solver_migration.py  test_sqp_driver.py  test_theta_registry.py
(+697 files in other folders)
