[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro_bo"
version = "0.1"
description = "Bayesian optimisation for energy system infrastructure planning"
authors = [
  { name = "Cameron Aldren", email = "cameronaldren@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "meteor_py  @ git+https://github.com/cja119/meteor_py.git",
  "geopandas==1.0.1",
  "pyogrio==0.10.0",
  "geopandas==1.0.1",
  ""
  
  
]
